# uma-split-helper

./: Cargo.toml  LICENSE  README.md
src/: main.rs
