[package]
name = "uma-split-helper"
version = "0.1.0"
edition = "2025"

[dependencies]
anyhow = "1"
eframe = { version = "0.24", features = ["glow"] }
once_cell = "1"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rfd = "0.12"
serde = { version = "1", features = ["derive"] }
trust-dns-resolver = "0.23"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }
